--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-592.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-292.5KB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35212, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-186.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.95MB/s(Youtube:不良林), server: 139.59.97.53, port: 443, type: trojan, password: 48b45c22-f05a-4eb8-a71a-efd4660cb4b9, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-821.3KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
   - {name: 🇨🇳 中国-403.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-352.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇺🇸 美国-362.5KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 未知国家-362.5KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-4.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-362.5KB/s(Youtube:不良林)
+      - 未知国家-362.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
