--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-306.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇭🇰 香港-1.52MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-227.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-592.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-506.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-403.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-257.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇫🇷 法国-698.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: 167.88.63.79, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-210.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇦 加拿大-533.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-563.1KB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: c71s3.jamjams3.net, port: 10922, type: vmess, uuid: 633aa237-6edc-4f81-861c-e0667d97f45d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-1.75MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 未知国家-386.7KB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-592.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-403.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-257.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-698.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-210.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-533.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 未知国家-1.75MB/s(Youtube:不良林)
+      - 未知国家-386.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
